--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background-color: darkgray;
+}
+
+.ng-valid:not(form).ng-touched  {
+    border-left: 5px solid #42A948; /* green */
+  }
+  
+  .ng-invalid:not(form).ng-touched {
+    border-left: 5px solid #a94442; /* red */
+  }
