--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,27 +1,26 @@
-
-<form class="mx-auto p-2" [formGroup]="loginForm">
-  <p class="text-center fs-1">Iniciar sesión</p>
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email</label>
-    <input formControlName="email" type="email" class="form-control" id="exampleInputEmail1"
-      aria-describedby="emailHelp">
-    <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger">
-      <div *ngIf="email.errors?.['required']">El email es requerido.</div>
-      <div *ngIf="email.errors?.['email']">
-        El email debe tener un formato válido.
+<div class="conteiner-fluid">
+  <div class="container">
+    <form [formGroup]="loginForm">
+      <p class="text-center fs-1">Iniciar sesión</p>
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email</label>
+        <input formControlName="email" type="email" class="form-control" id="exampleInputEmail1"
+          aria-describedby="emailHelp">
+        <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger">
+          <div *ngIf="email.errors?.['required']">El email es requerido.</div>
+          <div *ngIf="email.errors?.['email']">
+            El email debe tener un formato válido.
+          </div>
+        </div>
       </div>
-    </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+        <input formControlName="password" type="password" class="form-control" id="exampleInputPassword1">
+        <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
+          <div *ngIf="password.errors?.['required']">La contraseña es requerida.</div>
+        </div>
+      </div>
+      <button type="submit" (click)="login()" class="btn btn-primary">Ingresar</button>
+    </form>
   </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-    <input formControlName="password" type="password" class="form-control" id="exampleInputPassword1">
-    <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
-      <div *ngIf="password.errors?.['required']">La contraseña es requerida.</div>
-    </div>
-  </div>
-  <button type="submit" (click)="login()" class="btn btn-primary">Ingresar</button>
-</form>
-
-
-  
-
+</div>
